force-app/main/default/objects/Genre__c/Genre__c.object-meta.xml
<CustomObject>
    <label>Genre</label>
    <nameField>
        <label>Genre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>