force-app/main/default/objects/Genre__c/fields/LatestPublishedBook__c.field-meta.xml
<CustomField>
    <fullName>LatestPublishedBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The most recent published book to be added within this genre.</description>
    <inlineHelpText>The most recent published book to be added within this genre.</inlineHelpText>
    <label>Latest Published Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Genres</relationshipLabel>
    <relationshipName>Genres</relationshipName>
    <type>Lookup</type>
</CustomField>