force-app/main/default/objects/Genre__c/fields/MonthlyPublicationCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPublicationCount__c</fullName>
    <description>The number of books published under this Genre within the past 30 days. Based on PublicationDate__c.</description>
    <inlineHelpText>The number of books published under this Genre within the past 30 days. Based on PublicationDate__c.</inlineHelpText>
    <label>Monthly Publication Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>