force-app/main/default/objects/Genre__c/fields/MostActiveAuthor__c.field-meta.xml
<CustomField>
    <fullName>MostActiveAuthor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The author with the most titles within the genre</description>
    <inlineHelpText>The author with the most titles within the genre</inlineHelpText>
    <label>Most Active Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Genres</relationshipLabel>
    <relationshipName>Genres</relationshipName>
    <type>Lookup</type>
</CustomField>